# docs/swagger.yaml
@@ -12,6 +12,13 @@ definitions:
       access_token:
         type: string
     type: object
+  dto.ProductInputDTO:
+    properties:
+      name:
+        type: string
+      price:
+        type: number
+    type: object
   dto.UserInputDTO:
     properties:
       email:
@@ -37,6 +44,36 @@ info:
   title: Go Expert API Example
   version: "1.0"
 paths:
+  /products:
+    post:
+      consumes:
+      - application/json
+      description: Create Products
+      parameters:
+      - description: product request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.ProductInputDTO'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.Error'
+      security:
+      - ApiKeyAuth: []
+      summary: Create Product
+      tags:
+      - products
   /users:
     post:
       consumes:
